# chishiki

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/computation/: computation.h
include/computation/geometry/: bbox.h  color.h  geometryhead.h  intersection.h  ray.h  transform.h  triangle.h
include/computation/linear/: homo.h  linearhead.h  lintype.h
include/computation/sample/: mathdistri.h  samplehead.h  sampler.h  weighted.h
include/interface/: analyse.h
include/interface/camera/: camerabase.h  camerahead.h  film.h  perspective.h
include/object/: scene.h
include/object/accel/: accel.h  accelhead.h  kdaccel.h
include/object/environmentmap/: envmapbase.h  envmaphead.h  lightprobe.h
include/object/material/: bsdf.h  bssrdf.h  dielectric.h  diffuse.h  materialhead.h  microfacet.h  mirror.h  seperable.h
include/object/medium/: homomedium.h  mediumbase.h  mediumhead.h
include/object/shape/: shape.h  shapehead.h  sphere.h  trianglemesh.h
include/object/texture/: texturehead.h
include/rendering/integrator/: aoint.h  integratorbase.h  integratorhead.h  normaldiff.h  normalint.h  rtint.h  volint.h  whittedint.h
src/: main.cpp
src/computation/geometry/: bbox.cpp  color.cpp  transform.cpp  triangle.cpp
src/computation/linear/: homo.cpp  lintype.cpp
src/computation/sample/: mathdistri.cpp  weighted.cpp
src/interface/: analyse.cpp
src/interface/camera/: film.cpp  perspective.cpp
src/object/: scene.cpp
src/object/accel/: kdaccel.cpp
src/object/environmentmap/: lightprobe.cpp
src/object/material/: dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp  seperable.cpp
src/object/medium/: homomedium.cpp
src/object/shape/: shape.cpp  sphere.cpp  trianglemesh.cpp
src/rendering/integrator/: aoint.cpp  normaldiff.cpp  normalint.cpp  rtint.cpp  volint.cpp  whittedint.cpp
